# quantum

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: routes.py  server.py
checkpoints/: tokenizer.json
data/: corpus_chat.txt  corpus_en.txt
model/: __init__.py  attention.py  config.py  kv_cache.py  norm.py  rope.py  tokenizer.py  transformer.py
scripts/: benchmark.py  chat.py  compare.py  plot_loss.py
tests/: test_api.py  test_model.py
training/: dataset.py  evaluate.py  finetune.py  prepare_chat_data.py  prepare_data.py  train.py
web/: Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json
web/src/: App.css  App.tsx  index.css
web/src/components/: ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx
web/src/hooks/: useChat.ts
web/src/types/: index.ts
