[project]
name = "quantum"
version = "0.1.0"
description = "An open-source conversational AI built from scratch"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "torch>=2.3.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.10.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model", "training", "api"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
